tooling/nargo_cli/tests/snapshots/execution_success/regression_7836/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: u32) {
    if x == 43 { let _: u32 = foo(x); };
    assert(foo(x) != 0);
}

fn foo(input: u32) -> u32 {
    assert(input != 0);
    input % 100
}
